--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -16,7 +16,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Images"name: "images", widget: "list", required: false, allow_add: true,fields:
+      - {label: "Images",name: "images", widget: "list", required: false, allow_add: true,fields:
         - {label: "Image", name: "image", widget: "image", required: true}
         - {label: "Description", name: "Description", widget: "text", required: true}
         
